# Charon

./: Dockerfile.firewall  README.md  cookie.txt  docker-compose.firewall.yml  requirements.txt  start.sh
.cursor/rules/: 1.mdc
charon/: .env  .env.example  CHANGELOG.md  CONTRIBUTION.md  CROSS_PLATFORM.md  DEV_ENVIRONMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.firewall  LICENSE  PROGRESS.md  QOS_IMPLEMENTATION.md  README.firewall.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  check_charon.ps1  db_user_auth_plan.md  docker-compose.dev.yml  docker-compose.firewall.yml  docker-compose.wsl.yml  docker-compose.yml  docker-entrypoint.sh  documentation.md  entrypoint.sh  firewall_rules.html  project_milestones.md  pyproject.toml  requirements.txt  reset_password.py  run-charon.ps1  test_login.py
charon/.github/: PULL_REQUEST_TEMPLATE.md
charon/.github/workflows/: ci.yml
charon/data/: charon.db
charon/doc/: CHANGES.md  MIGRATION.md  api.md  architecture.md  content_filter.md  database.md  docker_setup.md  packet_filter.md  plugin_system.md  qos.md  scheduler.md  status.md  tasks.md  technical.md  ui_components.md  user_guide.md  web_interface.md  web_ui.md
charon/examples/: firewall_examples.py
charon/scripts/: dev_setup.sh  init_config.py  init_dev.sh  migrate_users.py  set_admin_password.py  setup.sh  setup_database.py  setup_firewall.sh  setup_network.sh
charon/src/: __init__.py
charon/src/api/: __init__.py  api.py
charon/src/core/: __init__.py  content_filter.py  firewall_service.py  packet_filter.py  qos.py
charon/src/db/: database.py
charon/src/plugins/: __init__.py  plugin_base.py  plugin_manager.py
charon/src/plugins/available/: __init__.py  hello_world.py
charon/src/scheduler/: __init__.py  firewall_scheduler.py  scheduler.py
charon/src/web/: __init__.py  firewall_service.py  server.py  users.json.bak
charon/src/web/data/: charon.db
charon/src/web/static/: script.js  style.css
charon/src/web/templates/: content_filter.html  dashboard.html  error.html  firewall_rules.html  index.html  login.html  logs.html  qos.html  settings.html  user_management.html
charon/tests/: conftest.py  test_content_filter.py  test_database.py  test_packet_filter.py  test_qos.py
