[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charon"
version = "0.1.0"
description = "A network firewall and monitoring system"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "Flask>=2.3.3,<3.0.0",
    "Flask-Login>=0.6.2,<0.7.0",
    "Werkzeug>=2.3.7,<4.0.0",
    "Flask-SocketIO>=5.3.4,<6.0.0",
    "SQLAlchemy>=2.0.20,<3.0.0",
    "alembic>=1.11.3,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "cryptography>=41.0.3,<45.0.0",
    "bcrypt>=4.0.1,<5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
]
docs = [
    "Sphinx>=7.1.2,<8.0.0",
]
dev = [
    "black>=23.7.0,<25.0.0",
    "mypy>=1.5.1,<2.0.0",
    "isort>=5.12.0,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/charon"
Documentation = "https://charon.readthedocs.io/"
Issues = "https://github.com/yourusername/charon/issues"
Changelog = "https://github.com/yourusername/charon/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short" 